--- a/uninf-search/uninf_search_1_problem.ipynb
+++ b/uninf-search/uninf_search_1_problem.ipynb
@@ -143,13 +143,44 @@
     "    Returns:\n",
     "        (path, time_cost, space_cost): solution as a path and stats.\n",
     "    \"\"\"\n",
-    "    \n",
+    "        \n",
     "    node = Node(problem.startstate, None)\n",
     "    time_cost = 1\n",
     "    space_cost = 1\n",
     "    #\n",
     "    # YOUR CODE HERE ...\n",
     "    #\n",
+    "\n",
+    "    if node.state == problem.goalstate:\n",
+    "        return build_path(node), time_cost, space_cost\n",
+    "\n",
+    "    explored = NodeQueue()\n",
+    "    \n",
+    "    frontier = NodeQueue()\n",
+    "    frontier.add(node)  \n",
+    "    \n",
+    "    while not frontier.is_empty():\n",
+    "        \n",
+    "        node = frontier.remove()\n",
+    "        explored.add(node)\n",
+    "             \n",
+    "        for action in range(problem.action_space.n):\n",
+    "\n",
+    "            child = Node(problem.sample(node.state, action), node)   \n",
+    "            time_cost += 1        \n",
+    "            \n",
+    "            if child.state in explored or child.state in frontier:\n",
+    "                continue\n",
+    "\n",
+    "            if problem.goalstate == child.state: \n",
+    "                return build_path(child), time_cost, space_cost\n",
+    "\n",
+    "            frontier.add(child)\n",
+    "             \n",
+    "        #a node is in memory when it is in the frontier or in explored queue, so space_cost in a given step is given\n",
+    "        #by how many nodes I have in both queues in that step (i need the max of all the steps)\n",
+    "        space_cost = max(space_cost, len(frontier) + len(explored))\n",
+    "\n",
     "    return build_path(node), time_cost, space_cost     \n"
    ]
   },
@@ -162,10 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -181,12 +210,11 @@
       "\u001b[96m##########################################\u001b[0m\n",
       "\u001b[96m#######  BFS Graph SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
-      "Your solution: []\n",
-      "N° of nodes explored: 1\n",
-      "Max n° of nodes in memory: 1\n",
+      "Your solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 59\n",
+      "Max n° of nodes in memory: 15\n",
       "\n",
-      "\u001b[91m> The solution is not correct, should be: \n",
-      "[(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n"
      ]
     }
@@ -236,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,11 +376,24 @@
     "  \n",
     "    total_time_cost = 0\n",
     "    total_space_cost = 1\n",
+    "    \n",
     "    for i in zero_to_infinity():\n",
     "        #\n",
     "        # YOUR CODE HERE ...\n",
     "        #\n",
-    "        return 0, 0, 0, 0 # Placeholder\n",
+    "        \n",
+    "        result = DLS(problem, i, DLS_Function)\n",
+    "        #the total number of nodes is the sum of all nodes that have been create on each DLS invocation\n",
+    "        total_time_cost += result[1]\n",
+    "        print(\"iteration: {} time_cost: {}\".format(i, result[1]))\n",
+    "\n",
+    "        #of all the DLS invocations, pick the one with the higher space cost\n",
+    "        total_space_cost = max(total_space_cost, result[2])\n",
+    "        \n",
+    "        if result[0] != \"cut_off\" and result[0] != \"failure\":\n",
+    "            return result[0], total_time_cost, total_space_cost, i\n",
+    "\n",
+    "    #solution_dls?? how is it used? never initialized\n",
     "    return solution_dls, total_time_cost, total_space_cost, i\n"
    ]
   },
@@ -365,9 +406,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration: 0 time_cost: 1\n",
+      "iteration: 1 time_cost: 5\n",
+      "iteration: 2 time_cost: 21\n",
+      "iteration: 3 time_cost: 85\n",
+      "iteration: 4 time_cost: 341\n",
+      "iteration: 5 time_cost: 1365\n",
+      "iteration: 6 time_cost: 5461\n",
+      "iteration: 7 time_cost: 21845\n",
+      "iteration: 8 time_cost: 87381\n",
+      "iteration: 9 time_cost: 21793\n",
+      "\u001b[96m##########################################\u001b[0m\n",
+      "\u001b[96m#######  IDS TREE SEARCH PROBLEM  ########\u001b[0m\n",
+      "\u001b[96m##########################################\u001b[0m\n",
+      "Necessary Iterations: 9\n",
+      "Your solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 138298\n",
+      "Max n° of nodes in memory: 9\n",
+      "\n",
+      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
+      "\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "envname = \"SmallMaze-v0\"\n",
     "environment = gym.make(envname)\n",
@@ -384,7 +452,50 @@
    "source": [
     "#### Discussion\n",
     "\n",
-    "Now that you have correctly implemented both BFS and IDS what can you say about the solutions they compute? Are there significant differences in the stats?"
+    "Now that you have correctly implemented both BFS and IDS what can you say about the solutions they compute? Are there significant differences in the stats?\n",
+    "\n",
+    "Results:\n",
+    "##########################################\n",
+    "#######  BFS TREE SEARCH PROBLEM  ########\n",
+    "##########################################\n",
+    "Solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+    "N° of nodes explored: 103723\n",
+    "Max n° of nodes in memory: 77791\n",
+    "\n",
+    "##########################################\n",
+    "#######  BFS Graph SEARCH PROBLEM  #######\n",
+    "##########################################\n",
+    "Your solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+    "N° of nodes explored: 59\n",
+    "Max n° of nodes in memory: 15\n",
+    "\n",
+    "##########################################\n",
+    "#######  IDS TREE SEARCH PROBLEM  ########\n",
+    "##########################################\n",
+    "\n",
+    "iteration: 0 time_cost: 1\n",
+    "iteration: 1 time_cost: 5\n",
+    "iteration: 2 time_cost: 21\n",
+    "iteration: 3 time_cost: 85\n",
+    "iteration: 4 time_cost: 341\n",
+    "iteration: 5 time_cost: 1365\n",
+    "iteration: 6 time_cost: 5461\n",
+    "iteration: 7 time_cost: 21845\n",
+    "iteration: 8 time_cost: 87381\n",
+    "iteration: 9 time_cost: 21793\n",
+    "\n",
+    "Necessary Iterations: 9\n",
+    "Your solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+    "N° of nodes explored: 138298\n",
+    "Max n° of nodes in memory: 9\n",
+    "\n",
+    "Best time_cost (#nodes explored): BFS Graph S. -> 59, BFS Tree S. -> 103723, IDS Tree S. -> 138298\n",
+    "Best space_cost (max #nodes in memory): IDS Tree S. -> 9, BFS Graph S. -> 15, BFS Tree S. -> 77791\n",
+    "\n",
+    "Conclusion: use BFS Graph Search\n",
+    "\n",
+    "Note: IDS has the lower space_cost because it's a depth first search algorithm, and nodes are removed from memory during search,\n",
+    "see the  corresponding lecture"
    ]
   }
  ],
@@ -404,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
