--- a/uninf-search/uninf_search_1_problem.ipynb
+++ b/uninf-search/uninf_search_1_problem.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,7 @@
     "             \n",
     "        space_cost = max(space_cost, len(frontier))  \n",
     "\n",
+    "    print(\"Not found!\")\n",
     "    return None, time_cost, space_cost"
    ]
   },
@@ -129,11 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def BFS_GraphSearch(problem):\n",
+    "\n",
+    "    print(\"Running BFS GraphSearch\")\n",
     "    \"\"\"\n",
     "    Graph Search BFS\n",
     "    \n",
@@ -173,6 +176,7 @@
     "                continue\n",
     "\n",
     "            if problem.goalstate == child.state: \n",
+    "                print(\"Path found.\")\n",
     "                return build_path(child), time_cost, space_cost\n",
     "\n",
     "            frontier.add(child)\n",
@@ -181,7 +185,16 @@
     "        #by how many nodes I have in both queues in that step (i need the max of all the steps)\n",
     "        space_cost = max(space_cost, len(frontier) + len(explored))\n",
     "\n",
-    "    return build_path(node), time_cost, space_cost     \n"
+    "    print(\"Not found!\")\n",
+    "    return build_path(node), time_cost, space_cost\n",
+    "\n",
+    "def states_to_pos(env, states):\n",
+    "    positions = []\n",
+    "\n",
+    "    for s in states:\n",
+    "        positions.append(env.state_to_pos(s))\n",
+    "\n",
+    "    return positions\n"
    ]
   },
   {
@@ -193,42 +206,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[96m##########################################\u001b[0m\n",
-      "\u001b[96m#######  BFS TREE SEARCH PROBLEM  ########\u001b[0m\n",
-      "\u001b[96m##########################################\u001b[0m\n",
-      "Solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 103723\n",
-      "Max n° of nodes in memory: 77791\n",
-      "\n",
-      "\u001b[96m##########################################\u001b[0m\n",
-      "\u001b[96m#######  BFS Graph SEARCH PROBLEM  #######\u001b[0m\n",
-      "\u001b[96m##########################################\u001b[0m\n",
-      "Your solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 59\n",
-      "Max n° of nodes in memory: 15\n",
-      "\n",
-      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
-      "\u001b[0m\n"
+      "[['C' 'C' 'S' 'C']\n",
+      " ['C' 'C' 'W' 'C']\n",
+      " ['C' 'C' 'C' 'C']\n",
+      " ['C' 'C' 'W' 'W']\n",
+      " ['C' 'C' 'W' 'G']]\n",
+      "Running BFS GraphSearch\n",
+      "Not found!\n",
+      "Path: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0)], time_cost: 61, memory_cost: 15\n"
      ]
     }
    ],
    "source": [
-    "envname = \"SmallMaze-v0\"\n",
+    "envname = \"BlockedMaze-v0\" #time_cost: 61, memory_cost: 15\n",
+    "#envname = \"GrdMaze-v0\" #time_cost: 59, memory_cost: 15\n",
+    "#envname = \"SmallMaze-v0\" #time_cost: 59, memory_cost: 15\n",
     "environment = gym.make(envname)\n",
+    "environment.render()\n",
     "\n",
-    "solution_ts, time_ts, memory_ts = BFS_TreeSearch(environment)\n",
-    "solution_gs, time_gs, memory_gs = BFS_GraphSearch(environment)\n",
+    "#solution, time, memory = BFS_TreeSearch(environment)\n",
+    "solution, time, memory = BFS_GraphSearch(environment)\n",
     "\n",
-    "results = CheckResult_L1A1([solution_ts, time_ts, memory_ts], [solution_gs, time_gs, memory_gs], environment)\n",
-    "results.check_sol_ts()\n",
-    "results.check_sol_gs()"
+    "print(\"Path: {}, time_cost: {}, memory_cost: {}\".format(states_to_pos(environment, solution), time, memory))\n",
+    "\n",
+    "#solution_ts, time_ts, memory_ts = BFS_TreeSearch(environment)\n",
+    "#solution_gs, time_gs, memory_gs = BFS_GraphSearch(environment)\n",
+    "\n",
+    "#results = CheckResult_L1A1([solution_ts, time_ts, memory_ts], [solution_gs, time_gs, memory_gs], environment)\n",
+    "#results.check_sol_ts()\n",
+    "#results.check_sol_gs()"
    ]
   },
   {
@@ -264,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,6 +337,7 @@
     "    \"\"\"\n",
     "    \n",
     "    if problem.goalstate == node.state: # Goal state check\n",
+    "        print(\"Goal found at iteration: {}\".format(node.depthcost))\n",
     "        return build_path(node), 1, node.depthcost\n",
     "    elif limit == 0: # Limit budget check for cutoff\n",
     "        return \"cut_off\", 1, node.depthcost\n",
@@ -359,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,44 +420,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration: 0 time_cost: 1\n",
-      "iteration: 1 time_cost: 5\n",
-      "iteration: 2 time_cost: 21\n",
-      "iteration: 3 time_cost: 85\n",
-      "iteration: 4 time_cost: 341\n",
-      "iteration: 5 time_cost: 1365\n",
-      "iteration: 6 time_cost: 5461\n",
-      "iteration: 7 time_cost: 21845\n",
-      "iteration: 8 time_cost: 87381\n",
-      "iteration: 9 time_cost: 21793\n",
-      "\u001b[96m##########################################\u001b[0m\n",
-      "\u001b[96m#######  IDS TREE SEARCH PROBLEM  ########\u001b[0m\n",
-      "\u001b[96m##########################################\u001b[0m\n",
-      "Necessary Iterations: 9\n",
-      "Your solution: [(0, 1), (0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 138298\n",
-      "Max n° of nodes in memory: 9\n",
-      "\n",
-      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
-      "\u001b[0m\n"
+      "Goal found at iteration: 11\n",
+      "Result: (2, 1, 0, 0, 4, 8, 12, 16, 17, 18, 19), time_cost: 21795, memory_cost: 11\n"
      ]
     }
    ],
    "source": [
-    "envname = \"SmallMaze-v0\"\n",
+    "#envname = \"GrdMaze-v0\" #num of nodes explored: 487824 with IDS, 21795 with DLS with limit 11\n",
+    "#envname = \"SmallMaze-v0\" #num of nodes explored: 138298 with IDS\n",
+    "envname = \"BlockedMaze-v0\"\n",
+    "\n",
     "environment = gym.make(envname)\n",
     "\n",
-    "solution_ts, time_ts, memory_ts, iterations_ts = IDS(environment, Recursive_DLS_TreeSearch)\n",
+    "#DLS\n",
+    "#limit = 5 #Result: cut_off, time_cost: 1365, memory_cost: 5 ON GrdMaze\n",
+    "#limit = 10 #Min limit to find a solution ON GrdMaze\n",
+    "limit = 11 #Result: cut_off, time_cost: 5592405, memory_cost: 11 ON BlockedMaze\n",
     "\n",
-    "results = CheckResult_L1A2([solution_ts, time_ts, memory_ts, iterations_ts], environment)\n",
-    "results.check_sol_ts()"
+    "result = DLS(environment, limit, Recursive_DLS_TreeSearch)\n",
+    "\n",
+    "print(\"Result: {}, time_cost: {}, memory_cost: {}\".format(result[0], result[1], result[2]))\n",
+    "\n",
+    "#IDS\n",
+    "#solution_ts, time_ts, memory_ts, iterations_ts = IDS(environment, Recursive_DLS_TreeSearch)\n",
+    "#results = CheckResult_L1A2([solution_ts, time_ts, memory_ts, iterations_ts], environment)\n",
+    "#results.check_sol_ts()"
    ]
   },
   {
