--- a/uninf-search/uninf_search_1_problem.ipynb
+++ b/uninf-search/uninf_search_1_problem.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,29 +420,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Goal found at iteration: 11\n",
-      "Result: (2, 1, 0, 0, 4, 8, 12, 16, 17, 18, 19), time_cost: 21795, memory_cost: 11\n"
+      "[['C' 'C' 'C' 'S']\n",
+      " ['C' 'C' 'W' 'C']\n",
+      " ['C' 'C' 'C' 'C']\n",
+      " ['C' 'W' 'W' 'W']\n",
+      " ['C' 'C' 'C' 'G']]\n",
+      "Goal found at iteration: 10\n",
+      "Result: (2, 1, 0, 4, 8, 12, 16, 17, 18, 19), time_cost: 21794, memory_cost: 10\n"
      ]
     }
    ],
    "source": [
-    "#envname = \"GrdMaze-v0\" #num of nodes explored: 487824 with IDS, 21795 with DLS with limit 11\n",
+    "envname = \"GrdMaze-v0\" #num of nodes explored: 487824 with IDS, 21795 with DLS with limit 11\n",
     "#envname = \"SmallMaze-v0\" #num of nodes explored: 138298 with IDS\n",
-    "envname = \"BlockedMaze-v0\"\n",
+    "#envname = \"BlockedMaze-v0\"\n",
     "\n",
     "environment = gym.make(envname)\n",
+    "environment.render()\n",
     "\n",
     "#DLS\n",
     "#limit = 5 #Result: cut_off, time_cost: 1365, memory_cost: 5 ON GrdMaze\n",
-    "#limit = 10 #Min limit to find a solution ON GrdMaze\n",
-    "limit = 11 #Result: cut_off, time_cost: 5592405, memory_cost: 11 ON BlockedMaze\n",
+    "limit = 10 #Min limit to find a solution ON GrdMaze\n",
+    "#limit = 11 #Result: cut_off, time_cost: 5592405, memory_cost: 11 ON BlockedMaze\n",
     "\n",
     "result = DLS(environment, limit, Recursive_DLS_TreeSearch)\n",
     "\n",
