--- a/inf-search/inf_search_2_problem.ipynb
+++ b/inf-search/inf_search_2_problem.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CONSTANTS, CHOOSE THE HEURISTIC FUNCTION HERE\n",
+    "\n",
+    "#H = Heu.l1_norm\n",
+    "#H = Heu.l2_norm\n",
+    "H = Heu.chebyshev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,11 +306,11 @@
     "    Returns:\n",
     "        (path, time_cost, space_cost): solution as a path and stats.\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
     "    p2 = environment.state_to_pos(environment.goalstate)\n",
-    "    heuristic = Heu.l1_norm(p1, p2)\n",
+    "    heuristic = H(p1, p2)\n",
     "    queue.add(Node(environment.startstate, None, 0, heuristic)) #NECESSARIO INIZIALIZZARE CON L'EURISTICA\n",
     "\n",
     "    time_cost = 1\n",
@@ -333,7 +346,7 @@
     "            \n",
     "            p1 = environment.state_to_pos(nextState)\n",
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
-    "            heuristic = Heu.l1_norm(p1, p2)\n",
+    "            heuristic = H(p1, p2)\n",
     "\n",
     "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
     "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
@@ -357,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +388,7 @@
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
     "    p2 = environment.state_to_pos(environment.goalstate)\n",
-    "    heuristic = Heu.l1_norm(p1, p2)\n",
+    "    heuristic = H(p1, p2)\n",
     "    queue.add(Node(environment.startstate, None, 0, heuristic)) #NECESSARIO INIZIALIZZARE CON L'EURISTICA\n",
     "    \n",
     "    explored = set()\n",
@@ -409,7 +422,7 @@
     "            #NOTA: chiaramente l'euristica e' dal child state al goal state, mica dal parent node al goal state\n",
     "            p1 = environment.state_to_pos(nextState)\n",
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
-    "            heuristic = Heu.l1_norm(p1, p2)\n",
+    "            heuristic = H(p1, p2)\n",
     "\n",
     "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
     "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
@@ -440,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +501,7 @@
      "output_type": "stream",
      "text": [
       "Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\n",
-      " l1_norm\n"
+      " chebyshev\n"
      ]
     },
     {
@@ -507,9 +520,9 @@
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
-      "Your solution: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 45\n",
-      "Max n° of nodes in memory: 15\n",
+      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 53\n",
+      "Max n° of nodes in memory: 16\n",
       "\n",
       "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n"
@@ -552,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +593,7 @@
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
     "    p2 = environment.state_to_pos(environment.goalstate)\n",
-    "    heuristic = Heu.l1_norm(p1, p2)\n",
+    "    heuristic = H(p1, p2)\n",
     "    queue.add(Node(environment.startstate, None, 0, heuristic)) #NECESSARIO INIZIALIZZARE CON L'EURISTICA\n",
     "\n",
     "    time_cost = 1\n",
@@ -614,7 +627,7 @@
     "            \n",
     "            p1 = environment.state_to_pos(nextState)\n",
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
-    "            heuristic = Heu.l1_norm(p1, p2)\n",
+    "            heuristic = H(p1, p2)\n",
     "\n",
     "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
     "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
@@ -638,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +681,7 @@
     "    queue = PriorityQueue() #ordinata per euristica\n",
     "    p1 = environment.state_to_pos(environment.startstate)\n",
     "    p2 = environment.state_to_pos(environment.goalstate)\n",
-    "    heuristic = Heu.l1_norm(p1, p2)\n",
+    "    heuristic = H(p1, p2)\n",
     "    queue.add(Node(environment.startstate, None, 0, heuristic)) #NECESSARIO INIZIALIZZARE CON L'EURISTICA\n",
     "    \n",
     "    explored = set()\n",
@@ -702,7 +715,7 @@
     "            #NOTA: chiaramente l'euristica e' dal child state al goal state, mica dal parent node al goal state\n",
     "            p1 = environment.state_to_pos(nextState)\n",
     "            p2 = environment.state_to_pos(environment.goalstate)\n",
-    "            heuristic = Heu.l1_norm(p1, p2)\n",
+    "            heuristic = H(p1, p2)\n",
     "\n",
     "            #formalmente sarebbe parentNode.pathcost + cost(parentNode, child), ma visto che siamo in una griglia ho sempre un offset di 1\n",
     "            #Noda che Greedy Search usa SOLO l'euristica per riordinare la priority queue\n",
@@ -734,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +784,7 @@
      "output_type": "stream",
      "text": [
       "Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\n",
-      " l1_norm\n"
+      " chebyshev\n"
      ]
     },
     {
@@ -782,8 +795,8 @@
       "\u001b[96m#######  A* TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m#########################################\u001b[0m\n",
       "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 8361\n",
-      "Max n° of nodes in memory: 6271\n",
+      "N° of nodes explored: 16977\n",
+      "Max n° of nodes in memory: 12733\n",
       "\n",
       "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n",
@@ -822,11 +835,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3931151391.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[40], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    TODO:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "TODO:"
+    "#TODO:"
    ]
   }
  ],
