--- a/inf-search/inf_search_2_problem.ipynb
+++ b/inf-search/inf_search_2_problem.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,20 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#CONSTANTS, CHOOSE THE HEURISTIC FUNCTION HERE\n",
     "\n",
-    "#H = Heu.l1_norm\n",
+    "H = Heu.l1_norm\n",
     "#H = Heu.l2_norm\n",
-    "H = Heu.chebyshev"
+    "#H = Heu.chebyshev"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -501,13 +501,14 @@
      "output_type": "stream",
      "text": [
       "Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\n",
-      " chebyshev\n"
+      " l1_norm\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "----------- USING HEURISTIC:  l1_norm\n",
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
@@ -520,9 +521,9 @@
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
-      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 53\n",
-      "Max n° of nodes in memory: 16\n",
+      "Your solution: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 45\n",
+      "Max n° of nodes in memory: 15\n",
       "\n",
       "\u001b[1m\u001b[92m===> Your solution is correct!\n",
       "\u001b[0m\n"
@@ -534,9 +535,17 @@
     "environment = gym.make(envname)\n",
     "environment.render()\n",
     "\n",
+    "heuristic = str(input('Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\\n'))\n",
+    "\n",
+    "if hasattr(Heu, heuristic):\n",
+    "    print(\"----------- USING HEURISTIC: \", heuristic)\n",
+    "else:\n",
+    "    raise Exception(\"HEURISTIC NOT FOUND: \" + heuristic)\n",
+    "\n",
+    "H = getattr(Heu, heuristic)\n",
+    "\n",
     "solution_ts, time_ts, memory_ts = greedy(environment, greedy_tree_search)\n",
     "solution_gs, time_gs, memory_gs = greedy(environment, greedy_graph_search)\n",
-    "heuristic = str(input('Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\\n'))\n",
     "\n",
     "results = CheckResult_L2A1([solution_ts, time_ts, memory_ts], [solution_gs, time_gs, memory_gs], heuristic, env)\n",
     "results.check_sol_ts()\n",
@@ -565,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -791,6 +800,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "----------- USING HEURISTIC:  chebyshev\n",
       "\u001b[96m#########################################\u001b[0m\n",
       "\u001b[96m#######  A* TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m#########################################\u001b[0m\n",
@@ -816,9 +826,17 @@
     "envname = \"SmallMaze-v0\"\n",
     "environment = gym.make(envname)\n",
     "\n",
+    "heuristic = str(input('Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\\n'))\n",
+    "\n",
+    "if hasattr(Heu, heuristic):\n",
+    "    print(\"----------- USING HEURISTIC: \", heuristic)\n",
+    "else:\n",
+    "    raise Exception(\"HEURISTIC NOT FOUND: \" + heuristic)\n",
+    "\n",
+    "H = getattr(Heu, heuristic)\n",
+    "\n",
     "solution_ts, time_ts, memory_ts = astar(environment, astar_tree_search)\n",
     "solution_gs, time_gs, memory_gs = astar(environment, astar_graph_search)\n",
-    "heuristic = str(input('Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\\n'))\n",
     "\n",
     "results = CheckResult_L2A2([solution_ts, time_ts, memory_ts], [solution_gs, time_gs, memory_gs], heuristic, env)\n",
     "results.check_sol_ts()\n",
@@ -847,9 +865,7 @@
      ]
     }
    ],
-   "source": [
-    "#TODO:"
-   ]
+   "source": []
   }
  ],
  "metadata": {
