--- a/inf-search/inf_search_2_problem.ipynb
+++ b/inf-search/inf_search_2_problem.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['C' 'C' 'S' 'C']\n",
+      "[['C' 'C' 'C' 'S']\n",
       " ['C' 'C' 'W' 'C']\n",
       " ['C' 'C' 'C' 'C']\n",
       " ['C' 'W' 'W' 'W']\n",
@@ -521,17 +521,18 @@
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
-      "Your solution: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "Your solution: [(1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "N° of nodes explored: 45\n",
       "Max n° of nodes in memory: 15\n",
       "\n",
-      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
+      "\u001b[91m> Your solution is not correct, should be: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "envname = \"SmallMaze-v0\"\n",
+    "#envname = \"SmallMaze-v0\"\n",
+    "envname = \"GrdMaze-v0\"\n",
     "environment = gym.make(envname)\n",
     "environment.render()\n",
     "\n",
@@ -556,6 +557,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results of GREEDY on GrdMaze-v0:\n",
+    "### L1_NORM\n",
+    "########################################################\n",
+    "#######  GREEDY BEST FIRST TREE SEARCH PROBLEM  ########\n",
+    "########################################################\n",
+    "Your solution: time-out\n",
+    "N° of nodes explored: 10001\n",
+    "Max n° of nodes in memory: 7501\n",
+    "\n",
+    "########################################################\n",
+    "#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\n",
+    "########################################################\n",
+    "N° of nodes explored: 45\n",
+    "Max n° of nodes in memory: 15\n",
+    "\n",
+    "### L2_NORM\n",
+    "########################################################\n",
+    "#######  GREEDY BEST FIRST TREE SEARCH PROBLEM  ########\n",
+    "########################################################\n",
+    "Your solution: time-out\n",
+    "N° of nodes explored: 10001\n",
+    "Max n° of nodes in memory: 7501\n",
+    "\n",
+    "########################################################\n",
+    "#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\n",
+    "########################################################\n",
+    "N° of nodes explored: 41\n",
+    "Max n° of nodes in memory: 14\n",
+    "\n",
+    "### CHEBYSHEV\n",
+    "########################################################\n",
+    "#######  GREEDY BEST FIRST TREE SEARCH PROBLEM  ########\n",
+    "########################################################\n",
+    "Your solution: time-out\n",
+    "N° of nodes explored: 10001\n",
+    "Max n° of nodes in memory: 7501\n",
+    "\n",
+    "########################################################\n",
+    "#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\n",
+    "########################################################\n",
+    "N° of nodes explored: 49\n",
+    "Max n° of nodes in memory: 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Assignment 2: A* Search\n",
     "The second assignment is to implement the A* search algorithm on SmallMaze. In particular, you have to implement both astar_tree_search and astar_graph_search versions that the generic astar will call. Use the L1 norm as a heuristic function first, then try the others to see the differences.\n",
     "\n",
@@ -574,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,9 +834,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['C' 'C' 'C' 'S']\n",
+      " ['C' 'C' 'W' 'C']\n",
+      " ['C' 'C' 'C' 'C']\n",
+      " ['C' 'W' 'W' 'W']\n",
+      " ['C' 'C' 'C' 'G']]\n"
+     ]
+    },
     {
      "name": "stdin",
      "output_type": "stream",
@@ -804,27 +864,30 @@
       "\u001b[96m#########################################\u001b[0m\n",
       "\u001b[96m#######  A* TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m#########################################\u001b[0m\n",
-      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 16977\n",
-      "Max n° of nodes in memory: 12733\n",
+      "Your solution: [(0, 2), (0, 1), (1, 1), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "N° of nodes explored: 40825\n",
+      "Max n° of nodes in memory: 30619\n",
       "\n",
-      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
+      "\u001b[91m> Your solution is not correct!\n",
       "\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
       "\u001b[96m#######  A* GRAPH SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
-      "Your solution: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "Your solution: [(1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "N° of nodes explored: 61\n",
       "Max n° of nodes in memory: 16\n",
       "\n",
-      "\u001b[1m\u001b[92m===> Your solution is correct!\n",
+      "\u001b[91m> Your solution is not correct, should be: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "envname = \"SmallMaze-v0\"\n",
+    "#envname = \"SmallMaze-v0\"\n",
+    "envname = \"GrdMaze-v0\"\n",
+    "\n",
     "environment = gym.make(envname)\n",
+    "environment.render()\n",
     "\n",
     "heuristic = str(input('Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\\n'))\n",
     "\n",
@@ -847,24 +910,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results of A* on GrdMaze-v0:\n",
+    "### L1_NORM\n",
+    "#########################################\n",
+    "#######  A* TREE SEARCH PROBLEM  ########\n",
+    "#########################################\n",
+    "N° of nodes explored: 55145\n",
+    "Max n° of nodes in memory: 41359\n",
+    "\n",
+    "##########################################\n",
+    "#######  A* GRAPH SEARCH PROBLEM  ########\n",
+    "##########################################\n",
+    "N° of nodes explored: 61\n",
+    "Max n° of nodes in memory: 16\n",
+    "\n",
+    "### L2_NORM\n",
+    "#########################################\n",
+    "#######  A* TREE SEARCH PROBLEM  ########\n",
+    "#########################################\n",
+    "N° of nodes explored: 56173\n",
+    "Max n° of nodes in memory: 42130\n",
+    "\n",
+    "##########################################\n",
+    "#######  A* GRAPH SEARCH PROBLEM  ########\n",
+    "##########################################\n",
+    "N° of nodes explored: 61\n",
+    "Max n° of nodes in memory: 16\n",
+    "\n",
+    "### CHEBYSHEV\n",
+    "#########################################\n",
+    "#######  A* TREE SEARCH PROBLEM  ########\n",
+    "#########################################\n",
+    "N° of nodes explored: 40825\n",
+    "Max n° of nodes in memory: 30619\n",
+    "\n",
+    "##########################################\n",
+    "#######  A* GRAPH SEARCH PROBLEM  ########\n",
+    "##########################################\n",
+    "N° of nodes explored: 61\n",
+    "Max n° of nodes in memory: 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Discussion\n",
     "Now that you have correctly implemented both Greedy-best-first and A* what can you say about the solutions they compute? Are there significant differences in the stats? Try to play with other heuristics as well and see if your results change."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3931151391.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[40], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    TODO:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
