--- a/RL/RL_4_problem.ipynb
+++ b/RL/RL_4_problem.ipynb
@@ -13,7 +13,11 @@
     "\n",
     "![Cliff](images/cliff.png)\n",
     "\n",
-    "The agent starts in cell $(3, 0)$ and has to reach the goal in $(3, 11)$. Falling from the cliff resets the position to the start state (the episode ends only when the goal state is reached). All other cells are safe. **Action dinamycs is deterministic**, meaning that the agent always reaches the desired next state."
+    "The agent starts in cell $(3, 0)$ and has to reach the goal in $(3, 11)$. Falling from the cliff resets the position to the start state with a reward = -100 (the episode ends only when the goal state is reached). All other cells are safe. **Action dinamycs is deterministic**, meaning that the agent always reaches the desired next state.\n",
+    "In tutte le altre celle non terminali paghera' un reward di -1.\n",
+    "\n",
+    "SARSA trovera' il safe path, Q-learning trova il piu breve, perche' SARSA e' on-policy, Q-learning no.\n",
+    "Questo ambiente e' totalmente deterministico, se l'agente decide di andare a destra ci va. Il problema e' che l'agente non conosce quali sono i reward nel mondo e non conosce il transition model. Quindi se finisce nel Cliff e' perche' sta facendo esplorazione."
    ]
   },
   {
@@ -67,9 +71,9 @@
     "In addition to the functionalities of the environments you have been using in the previous sessions, there are also a few more:\n",
     "\n",
     "- step(action): the agent **execute action in the environment** from the current state. Returns a tuple (new_state, reward, done, info) where:\n",
-    "    - new_state: is the new state reached as a consequence of the agent's last action\n",
-    "    - reward: the reward obtained by the agent\n",
-    "    - done: True if the episode has ended, False otherwise\n",
+    "    - new_state: is the new state reached as a consequence of the agent's last action (s')\n",
+    "    - reward: the reward obtained by the agent (r)\n",
+    "    - done: True if the episode has ended, False otherwise (raggiunto lo stato terminale o no)\n",
     "    - info: not used, you can safely discard it\n",
     "\n",
     "- reset(): the environment is reset and the agent goes back to the starting position. Returns the initial state id"
@@ -117,17 +121,19 @@
      "output_type": "stream",
      "text": [
       "Policy: \n",
-      " [[0 0 0 0 3 1 1 3 0 2 2 3]\n",
-      " [3 3 2 2 3 0 0 0 1 1 1 2]\n",
-      " [3 3 0 0 3 0 1 0 2 0 0 1]\n",
-      " [0 2 0 2 0 3 0 3 1 2 2 3]] \n",
-      " Total Reward of Random Policy: : -20 \n",
+      " [[1 2 2 3 0 0 2 3 0 0 3 0]\n",
+      " [0 2 1 1 2 0 3 3 2 0 0 2]\n",
+      " [1 2 3 2 2 2 0 1 1 2 2 1]\n",
+      " [1 0 0 2 0 1 1 3 3 2 1 2]] \n",
+      " Total Reward of Random Policy: : -2000 \n",
       " Episode Length 20 \n"
      ]
     }
    ],
    "source": [
-    "policy = np.random.choice(env.action_space.n, env.observation_space.n)\n",
+    "policy = np.random.choice(env.action_space.n, env.observation_space.n) #inizializza la policy a valori randomici tra tutte le possibili azioni\n",
+    "#due parametri, il primo numero numero di azioni, il secondo numeri di stati. \n",
+    "#questo genera un vettore lungo quanti sono gli stati e all'interno avra' un numero randomico tra 0 e numero_azioni - 1\n",
     "state = env.reset()\n",
     "ep_limit = 20 #maximum number of steps the policy will execute\n",
     "\n",
@@ -155,9 +161,9 @@
     "\n",
     "The solution returned by your Q-Learning implementation must be a tuple (policy, rewards, lengths) where:\n",
     "\n",
-    "- *policy*: array of action identifiers where the $i$-th action refers to the $i$-th state\n",
-    "- *rewards*: array of rewards where the $i$-th reward refers to the $i$-th episode of the training performed\n",
-    "- *lengths*: array of lengths where the $i$-th length refers to the $i$-th episode of the training performed (length in number of steps)\n",
+    "- *policy*: array of action identifiers where the $i$-th action refers to the $i$-th state (l'indice dell'azione da fare nello stato i)\n",
+    "- *rewards*: array of rewards where the $i$-th reward refers to the $i$-th episode of the training performed (reward accumulato nell'iesimo episodio)\n",
+    "- *lengths*: array of lengths where the $i$-th length refers to the $i$-th episode of the training performed (length in number of steps) (lunghezza dell'iesimo episodio)\n",
     "\n",
     "Implemented exploration functions:\n",
     "- *epsilon_greedy(q, state, epsilon)*\n",
@@ -184,17 +190,17 @@
      "output_type": "stream",
      "text": [
       "Choosing among: [0 1 2 3 4] with probability [0.1, 0.2, 0.5, 0.1, 0.1]: 2\n",
-      "Choosing among: [0 1 2 2 0] with probability [0.1, 0.2, 0.5, 0.1, 0.1]: 1\n",
+      "Choosing among: [1 1 1 1 2] with probability [0.1, 0.2, 0.5, 0.1, 0.1]: 1\n",
       "Values of all actions, max and argmax for the first 5 states\n",
-      "q[0]: [0.145 0.727 0.367 0.038], max : 0.727, argmax 1\n",
-      "q[1]: [0.891 0.903 0.734 0.798], max : 0.903, argmax 1\n",
-      "q[2]: [0.364 0.034 0.4   0.251], max : 0.400, argmax 2\n",
-      "q[3]: [0.524 0.03  0.641 0.729], max : 0.729, argmax 3\n",
-      "q[4]: [0.25  0.269 0.166 0.346], max : 0.346, argmax 3\n",
+      "q[0]: [0.506 0.522 0.454 0.128], max : 0.522, argmax 1\n",
+      "q[1]: [0.578 0.959 0.796 0.476], max : 0.959, argmax 1\n",
+      "q[2]: [0.143 0.843 0.674 0.6  ], max : 0.843, argmax 1\n",
+      "q[3]: [0.887 0.961 0.699 0.009], max : 0.961, argmax 1\n",
+      "q[4]: [0.029 0.856 0.125 0.191], max : 0.856, argmax 1\n",
       "array of first 5 states with max value across actions: \n",
-      " [0.727 0.903 0.4   0.729 0.346] \n",
+      " [0.522 0.959 0.843 0.961 0.856] \n",
       "array of first 5 states with maximum action \n",
-      " [1 1 2 3 3]\n"
+      " [1 1 1 1 1]\n"
      ]
     }
    ],
@@ -275,10 +281,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def maxQ(fromState, q):\n",
+    "    return q[fromState].max()\n",
+    "\n",
+    "#alpha: leraning rate\n",
+    "#gamma: discount factor\n",
     "def q_learning(environment, episodes, alpha, gamma, expl_func, expl_param):\n",
     "    \"\"\"\n",
     "    Performs the Q-Learning algorithm for a specific environment\n",
@@ -298,9 +309,34 @@
     "    q = np.zeros((environment.observation_space.n, environment.action_space.n))  # Q(s, a)\n",
     "    rews = np.zeros(episodes)\n",
     "    lengths = np.zeros(episodes)\n",
-    "    #\n",
-    "    # Code Here!\n",
-    "    #\n",
+    "\n",
+    "    print (environment.startstate)\n",
+    "    \n",
+    "    for i in range(0, episodes):\n",
+    "        \n",
+    "        el = 0 #initialize counter to accumulate the number of steps the policy execute (episode length)\n",
+    "        total_reward = 0 #initialize accumulate to sum the rewards received at each step \n",
+    "        \n",
+    "        s = environment.reset()\n",
+    "        done = False\n",
+    "\n",
+    "        while not done:    \n",
+    "            a = expl_func(q, s, expl_param)\n",
+    "            next_state, reward, done, _ = env.step(a)  # Execute a step, take action a from state s\n",
+    "            \n",
+    "            #Q(s, a) update\n",
+    "            q[s, a] = q[s, a] + alpha * (reward + gamma * maxQ(next_state, q) - q[s, a])\n",
+    "           \n",
+    "            s = next_state\n",
+    "\n",
+    "            #aggiornamento statistiche\n",
+    "            total_reward += reward\n",
+    "            el += 1          \n",
+    "\n",
+    "        rews[i] = total_reward\n",
+    "        lengths[i] = el\n",
+    "\n",
+    "        #implementa da riga 3 a riga 11 inclusa delle slide \n",
     "    policy = q.argmax(axis=1) # q.argmax(axis=1) automatically extract the policy from the q table\n",
     "    return policy, rews, lengths"
    ]
@@ -314,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +363,8 @@
       "x  C  C  C  C  C  C  C  C  C  C  T\n",
       "\n",
       "\n",
-      "Execution time: 0.0018s\n",
+      "36\n",
+      "Execution time: 0.0988s\n",
       "\n",
       "\u001b[96m#####################################################\u001b[0m\n",
       "\u001b[96m#######  Environment: Cliff-v0 \tQ-Learning  #########\u001b[0m\n",
@@ -335,9 +372,9 @@
       "\n",
       "\u001b[1m\u001b[92m===> Your policy:\n",
       "\n",
-      "[['U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U']\n",
-      " ['U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U']\n",
-      " ['U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U']\n",
+      "[['L' 'R' 'U' 'D' 'U' 'R' 'R' 'D' 'R' 'R' 'D' 'D']\n",
+      " ['U' 'R' 'L' 'R' 'D' 'R' 'D' 'D' 'R' 'D' 'D' 'D']\n",
+      " ['R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'D']\n",
       " ['U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U']]\u001b[0m\n",
       "\n",
       "\u001b[1m\u001b[92m===> Our policy:\n",
@@ -624,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
