--- a/RL/RL_4_problem.ipynb
+++ b/RL/RL_4_problem.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
       "\n",
       "\n",
       "36\n",
-      "Execution time: 0.0988s\n",
+      "Execution time: 2.3627s\n",
       "\n",
       "\u001b[96m#####################################################\u001b[0m\n",
       "\u001b[96m#######  Environment: Cliff-v0 \tQ-Learning  #########\u001b[0m\n",
@@ -370,8 +370,8 @@
       "\n",
       "\u001b[1m\u001b[92m===> Your policy:\n",
       "\n",
-      "[['L' 'R' 'U' 'D' 'U' 'R' 'R' 'D' 'R' 'R' 'D' 'D']\n",
-      " ['U' 'R' 'L' 'R' 'D' 'R' 'D' 'D' 'R' 'D' 'D' 'D']\n",
+      "[['R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'D']\n",
+      " ['R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'D']\n",
       " ['R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'R' 'D']\n",
       " ['U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U' 'U']]\u001b[0m\n",
       "\n",
@@ -392,14 +392,18 @@
     "\n",
     "# Learning parameters\n",
     "episodes = 500\n",
-    "alpha = .3\n",
-    "gamma = .9\n",
-    "epsilon = .1\n",
+    "alpha = .3 #.3\n",
+    "gamma = .9 #.9\n",
+    "epsilon = .1 #.1\n",
     "\n",
     "t = timer()\n",
     "\n",
     "# Q-Learning epsilon greedy\n",
-    "policy, rewards, lengths = q_learning(env, episodes, alpha, gamma, epsilon_greedy, epsilon)\n",
+    "#policy, rewards, lengths = q_learning(env, episodes, alpha, gamma, epsilon_greedy, epsilon)\n",
+    "\n",
+    "temperature = 10 #10\n",
+    "policy, rewards, lengths = q_learning(env, episodes, alpha, gamma, softmax, temperature)\n",
+    "\n",
     "print(f\"Execution time: {round(timer() - t, 4)}s\") \n",
     "policy_render = np.vectorize(env.actions.get)(policy.reshape(env.shape))\n",
     "_ = run_episode(env, policy, 20)\n",
